# amazon-connect-mcp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS
.kiro/settings/: mcp.json
.kiro/steering/: llm-guidance.md  product.md  structure.md  tech.md
docs/: AGENT_WORKSPACE_VIEWS_BEST_PRACTICES.md  AMAZON_CONNECT_API_FEATURES.md  MCP_ARCHITECTURE_BEST_PRACTICES.md  TEMPLATES_AND_VIEWS_RESEARCH.md  TODO_TEMPLATES.md  WEBSITE_ONBOARDING_WIZARD.md
src/amazon_connect_mcp/: __init__.py  aws_clients.py  config.py  server.py
src/amazon_connect_mcp/templates/: __init__.py  _global_guidance.json  loader.py
src/amazon_connect_mcp/templates/campaigns/: _llm_guidance.json  healthcare_campaign.json
src/amazon_connect_mcp/templates/cases/: _llm_guidance.json  billing_inquiry.json  ecommerce_support.json  financial_services.json  general_support.json  healthcare_support.json  insurance_claims.json  technical_support.json  technology_support.json  telecom_support.json  travel_hospitality.json  utilities_support.json
src/amazon_connect_mcp/templates/contact_flows/: _llm_guidance.json  ecommerce_after_hours.json  ecommerce_inbound.json  ecommerce_transfer.json  financial_services_after_hours.json  financial_services_inbound.json  financial_services_transfer.json  healthcare_after_hours.json  healthcare_inbound.json  telecom_inbound.json  (+6 more)
src/amazon_connect_mcp/tools/: __init__.py  ai.py  analytics.py  campaigns.py  cases.py  config.py  contacts.py  core.py  profiles.py  visualizer.py  visualizer_server.py  wizard.py
(+70 files in other folders)
