[project]
name = "amazon-connect-mcp"
version = "0.1.0"
description = "MCP server for Amazon Connect"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amazon_connect_mcp"]

[project.scripts]
amazon-connect-mcp = "amazon_connect_mcp.server:main"
